--- a/nginx/sites/example.conf
+++ b/nginx/sites/example.conf
@@ -3,7 +3,7 @@ server {
     listen 8080 ssl;
     index index.php index.html;
     server_name localhost;
-    root /var/www/html/app_name/public;
+    root /var/www/html/$APP_NAME/public;
 
     #add_header X-Frame-Options "SAMEORIGIN";
     #add_header X-XSS-Protection "1; mode=block";
