--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
     build:
       context: ../docker-compose
       dockerfile: nginx/nginx.dockerfile
-    container_name: nginx_$APP_NAME
+    container_name: nginx
     ports:
       - "8080:8080"
     volumes:
-      - ../:/var/www/html/$APP_NAME
+      - ./code/:/var/www/html/code
     depends_on:
       - php
       - redis
@@ -18,12 +18,12 @@ services:
     build:
       context: ../docker-compose
       dockerfile: php/php.dockerfile
-    container_name: php_$APP_NAME
+    container_name: php
     ports:
       - "9000:9000"
     volumes:
-      - ../:/var/www/html/$APP_NAME
-      - ./php/local.ini:/etc/php/conf.d/local.ini
+      - ./code/:/var/www/html/code
+      - ./php/local.ini:/usr/local/etc/php/php.ini
     networks:
       - laravel
   redis:
@@ -31,31 +31,31 @@ services:
       context: ../docker-compose
       dockerfile: redis/redis.dockerfile
     restart: always
-    container_name: redis_$APP_NAME
+    container_name: redis
     ports:
       - "6379:6379"
     command: redis-server --save 20 1 --loglevel warning --requirepass secret
     volumes:
-      - ../docker-compose/redis/data:/data
+      - ./redis/data:/data
     networks:
       - laravel
   composer:
     build:
       context: ../docker-compose
       dockerfile: composer/composer.dockerfile
-    container_name: composer_$APP_NAME
+    container_name: composer
     volumes:
-      - ../:/var/www/html/$APP_NAME
-    working_dir: /var/www/html/$APP_NAME
+      - ./code:/var/www/html/code
+    working_dir: /var/www/html/code/$APP_NAME
     networks:
       - laravel
   artisan:
     build:
       context: ../docker-compose
       dockerfile: php/php.dockerfile
-    container_name: artisan_$APP_NAME
+    container_name: artisan
     volumes:
-      - ../:/var/www/html/code
+      - ./code/:/var/www/html/code
     entrypoint: [ "php", "/var/www/html/code/$APP_NAME/artisan" ]
     networks:
       - laravel
